Solves more info overflow issue.

--- a/css/style.css
+++ b/css/style.css
@@ -291,7 +291,7 @@ nav .section-right a:hover {
     color: var(--brown-color) !important;
 }
 
-.exit:hover {
+.exit-x:hover {
     transform: rotate(90deg);
     transition: transform 0.3s;
     cursor: pointer;
@@ -350,6 +350,7 @@ nav .section-right a:hover {
   position: absolute;
   top: 0;
   left: 0;
+  height: 100vh;
   width: 100%;
   z-index: 200;
   padding: 32px;
@@ -407,6 +408,7 @@ nav .section-right a:hover {
 }
 
 iframe {
+  box-sizing: border-box;
   width: 100%;
   height: 100%;
   border-radius: 8px;
